<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp"
    android:background="@color/background_app"
    tools:context=".ejemplosKotlin.imccalculadoraApp.InicioIMCActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewHombre"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:layout_constraintEnd_toStartOf="@+id/viewMujer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:src="@drawable/baseline_man_24"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/helicoptero"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        
    </androidx.cardview.widget.CardView>  <!-- fin cardView HOMBRE-->
    
    <androidx.cardview.widget.CardView
        android:id="@+id/viewMujer"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toEndOf="@+id/viewHombre"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:src="@drawable/baseline_woman_24"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.cardview.widget.CardView> <!-- fin cardView MUJER -->

    <androidx.cardview.widget.CardView
        android:id="@+id/viewAltura"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/viewHombre"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/background_component"
        app:cardCornerRadius="16dp" >
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Altura"
                android:layout_marginTop="16dp"
                android:textColor="@color/title_text"
                />

            <TextView
                android:id="@+id/tvAltura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo = "210"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView> <!-- fin CardView Altura -->

    <androidx.cardview.widget.CardView
        android:id="@+id/viewPeso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32sp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:layout_constraintEnd_toStartOf="@+id/viewEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewAltura"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textAllCaps="true"
                android:textColor="@color/title_text"
                />

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="64"
                android:textSize="48dp"
                android:textColor="@color/white"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menos"
                    app:tint="@color/white"
                    app:backgroundTint="@color/background_fab"
                    android:layout_marginEnd="16dp"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSumarPeso"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_sumar"
                    app:tint="@color/white"
                    app:backgroundTint="@color/background_fab"
                    android:layout_height="match_parent"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/viewEdad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/viewPeso"
        app:layout_constraintTop_toBottomOf="@id/viewAltura"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edad"
            android:textAllCaps="true"
            android:textColor="@color/title_text"
            />

        <TextView
            android:id="@+id/tvEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="29"
            android:textSize="48dp"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRestarEdad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_menos"
                app:tint="@color/white"
                app:backgroundTint="@color/background_fab"
                android:layout_marginEnd="16dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSumarEdad"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_sumar"
                app:tint="@color/white"
                app:backgroundTint="@color/background_fab"
                android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView> <!-- fin CardView Edad -->

    <Button
        android:id="@+id/btnCalcularIMC"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:text="Calcular"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>